--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,12 @@
        android:layout_height="0dp"
        android:layout_weight="1">
 
-       <TextView
+
+       <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:text="@string/Win"
-           android:id="@+id/textView"
-           android:textSize="70dp" />
+           android:text="Restart"
+           android:id="@+id/restart" />
    </LinearLayout>
 
     <LinearLayout
